--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,8 +16,8 @@
     --popover: hsl(0, 0%, 100%);
     --popover-foreground: hsl(214, 24%, 11%);
 
-    --primary: hsl(222.2, 47.4%, 11.2%);
-    --primary-foreground: hsl(210, 40%, 98%);
+    --primary: hsl(142, 60%, 91%);
+    --primary-foreground: hsl(142, 71%, 45%);
 
     --secondary: hsl(210, 40%, 96.1%);
     --secondary-foreground: hsl(222.2, 47.4%, 11.2%);
@@ -31,7 +31,7 @@
     --destructive: hsl(0, 84.2%, 60.2%);
     --destructive-foreground: hsl(210, 40%, 98%);
 
-    --border: hsl(214.3, 31.8%, 91.4%);
+    --border: hsl(167, 32%, 91%);
     --input: hsl(214.3, 31.8%, 91.4%);
     --ring: hsl(214, 24%, 11%);
 
@@ -43,7 +43,7 @@
 
   .dark {
     --background: hsl(214, 24%, 11%);
-    --foreground: hsl(210, 40%, 98%);
+    --foreground: hsl(206, 22%, 68%);
 
     --card: hsl(211, 24%, 17%);
     --card-foreground: hsl(210, 40%, 98%);
@@ -54,8 +54,8 @@
     --popover: hsl(214, 24%, 11%);
     --popover-foreground: hsl(210, 40%, 98%);
 
-    --primary: hsl(210, 40%, 98%);
-    --primary-foreground: hsl(222.2, 47.4%, 11.2%);
+    --primary: hsl(142, 71%, 45%);
+    --primary-foreground: hsl(210, 40%, 98%);
 
     --secondary: hsl(217.2, 32.6%, 17.5%);
     --secondary-foreground: hsl(210, 40%, 98%);
@@ -69,12 +69,14 @@
     --destructive: hsl(0, 62.8%, 30.6%);
     --destructive-foreground: hsl(210, 40%, 98%);
 
-    --border: hsl(217.2, 32.6%, 17.5%);
-    --input: hsl(217.2, 32.6%, 17.5%);
-    --ring: hsl(212.7, 26.8%, 83.9%);
+    --border: hsl(217, 84%, 40%);
+    --input: hsl(162, 78%, 28%);
+    --ring: hsl(135, 75%, 46%);
 
-    --hovered: hsl(212, 19%, 15%);
-    --active: hsl(206.9, 56.3%, 17.1%);
+    --hovered: hsl(212, 20%, 15%);
+
+    --active: hsl(176, 47%, 13%);
+    --active-foreground: hsl(148, 72%, 63%);
   }
 }
 
@@ -85,4 +87,23 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+::-webkit-scrollbar {
+  width: 4px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+::-webkit-scrollbar-thumb-y {
+  opacity: 0;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  border-radius: 4px;
+  background-color: #b6b6b6;
+}
+
+:hover::-webkit-scrollbar {
+  opacity: 0;
 }
