categoryProduct and product add implemnted

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -93,3 +93,11 @@
   border-radius: 4px;
   background-color: var(--scroll-bar);
 }
+
+.lock {
+  overflow-y: scroll !important;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
